--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body class="body">
     <div class="page">
       <h2 class="annoucment-bar">Free Delivery on all order above 150$</h2>
-      <!---->
       <header class="navigation">
         <a href="#" class="navigation__logo"
           ><img src="./images/logo.svg" alt="" class="navigation__logo-image" />Sid</a
@@ -36,7 +35,6 @@
           </a>
         </ul>
       </header>
-      <!---->
       <section class="product-information">
         <div class="product-information__left-side">
           <div class="product-information__images">
@@ -133,75 +131,62 @@
               >
               <a href="#" class="product-information__option-btn">24-50mm Lens Kit</a>
             </div>
-            <div class="product-information__instock">
-              <div class="product-information__instock-quantity"></div>
-              <p class="product-information__instock-currently">Currently In Stock</p>
-            </div>
-            <div class="product-information__featured-specs">
-              <div class="product-information__feature">
-                <img
-                  src="./images/mini-chip.svg"
-                  alt=""
-                  class="product-information__feature-icon"
-                />
-                <p class="product-information__feature-text">Expeed 6 Chip</p>
-              </div>
-              <div class="product-information__feature">
-                <img
-                  src="./images/mini-objective.svg"
-                  alt=""
-                  class="product-information__feature-icon"
-                />
-                <p class="product-information__feature-text">Works with 24-50mm Lens</p>
-              </div>
-              <div class="product-information__feature">
-                <img
-                  src="./images/mini-megapixels.svg"
-                  alt=""
-                  class="product-information__feature-icon"
-                />
-                <p class="product-information__feature-text">24.3 million Effective Pixels</p>
-              </div>
-              <div class="product-information__feature">
-                <img
-                  src="./images/mini-battery.svg"
-                  alt=""
-                  class="product-information__feature-icon"
-                />
-                <p class="product-information__feature-text">
-                  EN-EL15c rechargeable Li-ion battery
-                </p>
-              </div>
-              <a href="#" class="product-information__feature-view-all">View All Tech Specs</a>
-            </div>
-            <div class="product-information__btns">
-              <a href="#" class="product-information__btn product-information__btn_cart"
-                >Add To Cart</a
-              >
-              <a href="#" class="product-information__btn product-information__btn_buy"
-                >Buy It Now</a
-              >
-            </div>
-            <ul class="product-information__menu">
-              <a href="#" class="product-information__menu-item"
-                ><img src="./images/help.svg" alt="" class="product-information__menu-image" />Got
-                any questions?&nbsp;<span class="product-information__menu-accent"
-                  >Contact us</span
-                ></a
-              >
-              <p class="product-information__menu-item">
-                <img
-                  src="./images/shiping.svg"
-                  alt=""
-                  class="product-information__menu-image"
-                />Free Shipping over $150
-              </p>
-              <a href="#" class="product-information__menu-item"
-                ><img src="./images/share.svg" alt="" class="product-information__menu-image" />
-                Share
-              </a>
-            </ul>
           </div>
+          <div class="product-information__instock">
+            <div class="product-information__instock-quantity"></div>
+            <p class="product-information__instock-currently">Currently In Stock</p>
+          </div>
+          <div class="product-information__featured-specs">
+            <div class="product-information__feature">
+              <img src="./images/mini-chip.svg" alt="" class="product-information__feature-icon" />
+              <p class="product-information__feature-text">Expeed 6 Chip</p>
+            </div>
+            <div class="product-information__feature">
+              <img
+                src="./images/mini-objective.svg"
+                alt=""
+                class="product-information__feature-icon"
+              />
+              <p class="product-information__feature-text">Works with 24-50mm Lens</p>
+            </div>
+            <div class="product-information__feature">
+              <img
+                src="./images/mini-megapixels.svg"
+                alt=""
+                class="product-information__feature-icon"
+              />
+              <p class="product-information__feature-text">24.3 million Effective Pixels</p>
+            </div>
+            <div class="product-information__feature">
+              <img
+                src="./images/mini-battery.svg"
+                alt=""
+                class="product-information__feature-icon"
+              />
+              <p class="product-information__feature-text">EN-EL15c rechargeable Li-ion battery</p>
+            </div>
+            <a href="#" class="product-information__feature-view-all">View All Tech Specs</a>
+          </div>
+          <div class="product-information__btns">
+            <a href="#" class="product-information__btn product-information__btn_cart"
+              >Add To Cart</a
+            >
+            <a href="#" class="product-information__btn product-information__btn_buy">Buy It Now</a>
+          </div>
+          <ul class="product-information__menu">
+            <a href="#" class="product-information__menu-item"
+              ><img src="./images/help.svg" alt="" class="product-information__menu-image" />Got any
+              questions?&nbsp;<span class="product-information__menu-accent">Contact us</span></a
+            >
+            <p class="product-information__menu-item">
+              <img src="./images/shiping.svg" alt="" class="product-information__menu-image" />Free
+              Shipping over $150
+            </p>
+            <a href="#" class="product-information__menu-item"
+              ><img src="./images/share.svg" alt="" class="product-information__menu-image" />
+              Share
+            </a>
+          </ul>
         </div>
       </section>
       <section class="promo-marquee">
@@ -251,32 +236,38 @@
       <section class="extra-promo">
         <div class="extra-promo__card">
           <img src="./images/chip.png" alt="" class="extra-promo__image" />
-          <h3 class="extra-promo__title">Super powered.</h3>
-          <p class="extra-promo__paragraph">
-            Z 5 is powered by Nikon&#8217;s fast, comprehensive EXPEED 6 image processing system.
-            It’s the secret behind the camera&#8217;s sensational photo and video quality, autofocus
-            performance, low-light capabilities, distortion control, image clarity, color
-            reproduction and more.
-          </p>
+          <div class="extra-promo__text">
+            <h3 class="extra-promo__title">Super powered.</h3>
+            <p class="extra-promo__paragraph">
+              Z 5 is powered by Nikon&#8217;s fast, comprehensive EXPEED 6 image processing system.
+              It’s the secret behind the camera&#8217;s sensational photo and video quality,
+              autofocus performance, low-light capabilities, distortion control, image clarity,
+              color reproduction and more.
+            </p>
+          </div>
         </div>
         <div class="extra-promo__card">
           <img src="./images/sutter-speed.png" alt="" class="extra-promo__image" />
-          <h3 class="extra-promo__title">The stability you crave.</h3>
-          <p class="extra-promo__paragraph">
-            Sharpness starts with stability, and Z 5 has one of the best in-camera image
-            stabilization systems available. NIKKOR Z lenses activate 5-axis VR image
-            stabilization—up to five stops* of stabilization in up to five directions
-          </p>
+          <div class="extra-promo__text">
+            <h3 class="extra-promo__title">The stability you crave.</h3>
+            <p class="extra-promo__paragraph">
+              Sharpness starts with stability, and Z 5 has one of the best in-camera image
+              stabilization systems available. NIKKOR Z lenses activate 5-axis VR image
+              stabilization—up to five stops* of stabilization in up to five directions
+            </p>
+          </div>
         </div>
         <div class="extra-promo__card">
           <img src="./images/stability.png" alt="" class="extra-promo__image" />
-          <h3 class="extra-promo__title">In the blink of an iris.</h3>
-          <p class="extra-promo__paragraph">
-            Freeze time with shutter speeds as fast as 1/8000 of a second—fast enough to capture
-            moments invisible to the naked eye. When shooting with wide aperture settings for
-            shallow depth-of-field and blurred backgrounds, that speed can also be used to control
-            your shot&#8217;s brightness.
-          </p>
+          <div class="extra-promo__text">
+            <h3 class="extra-promo__title">In the blink of an iris.</h3>
+            <p class="extra-promo__paragraph">
+              Freeze time with shutter speeds as fast as 1/8000 of a second—fast enough to capture
+              moments invisible to the naked eye. When shooting with wide aperture settings for
+              shallow depth-of-field and blurred backgrounds, that speed can also be used to control
+              your shot&#8217;s brightness.
+            </p>
+          </div>
         </div>
       </section>
       <section class="reviews">
@@ -411,29 +402,31 @@
         <a href="#" class="review__write-btn">Write a review</a>
       </section>
       <section class="contact-us">
-        <h2 class="contact-us__title">Got a question? We are here to help</h2>
-        <p class="contact-us__description">
-          If you don’t find an answer in our <a href="#" class="contact-us__link"> FAQ page</a>,
-          please contact us below, our customer support is available Monday to Friday: 9am- 5pm.
-        </p>
-        <div class="contact-us__faces">
-          <div class="contact-us__face-item">
-            <img src="./images/face-1.png" alt="" class="contact-us__face" />
+        <div class="contact-us__content">
+          <h2 class="contact-us__title">Got a question? We are here to help</h2>
+          <p class="contact-us__description">
+            If you don’t find an answer in our <a href="#" class="contact-us__link"> FAQ page</a>,
+            please contact us below, our customer support is available Monday to Friday: 9am- 5pm.
+          </p>
+          <div class="contact-us__faces">
+            <div class="contact-us__face-item">
+              <img src="./images/face-1.png" alt="" class="contact-us__face" />
+            </div>
+            <div class="contact-us__face-item">
+              <img src="./images/face-2.png" alt="" class="contact-us__face" />
+            </div>
+            <div class="contact-us__face-item">
+              <img src="./images/face-3.png" alt="" class="contact-us__face" />
+            </div>
+            <div class="contact-us__face-item">
+              <img src="./images/face-4.png" alt="" class="contact-us__face" />
+              <div class="contact-us__online"></div>
+            </div>
           </div>
-          <div class="contact-us__face-item">
-            <img src="./images/face-2.png" alt="" class="contact-us__face" />
+          <div class="contact-us__btn-and-answer">
+            <a href="#" class="contact-us__btn">Contact us</a>
+            <p class="contact-us__answer">You’ll get a response within 24 hours</p>
           </div>
-          <div class="contact-us__face-item">
-            <img src="./images/face-3.png" alt="" class="contact-us__face" />
-          </div>
-          <div class="contact-us__face-item">
-            <img src="./images/face-4.png" alt="" class="contact-us__face" />
-            <div class="contact-us__online"></div>
-          </div>
-        </div>
-        <div class="contact-us__btn-and-answer">
-          <a href="#" class="contact-us__btn">Contact us</a>
-          <p class="contact-us__answer">You’ll get a response within 24 hours</p>
         </div>
         <img src="./images/video-entry-product.svg" alt="" class="contact-us__img" />
       </section>
@@ -493,6 +486,39 @@
               <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
               <div class="showcase__review">
                 4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
+            </div>
+          </a>
+          <a href="#" class="showcase__item">
+            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$779.99</p>
+            <div class="showcase__btn-and-review">
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.0 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
+            </div>
+          </a>
+          <a href="#" class="showcase__item">
+            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$779.99</p>
+            <div class="showcase__btn-and-review">
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.0 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
+            </div>
+          </a>
+          <a href="#" class="showcase__item">
+            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$779.99</p>
+            <div class="showcase__btn-and-review">
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.0 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
               </div>
             </div>
           </a>
